[package]
name = "ranidb"
version = "0.1.0"
authors = ["Sam Lakerveld <dark@dark.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
nom = "6.0.0"
rand = "0.7.3"
tokio = { version = "0.3.3", features = [ "rt", "net", "time" ] }
